fixing div overlapping issues

--- a/source/assets/stylesheets/pages/_about.scss
+++ b/source/assets/stylesheets/pages/_about.scss
@@ -1,8 +1,9 @@
 #about-section {
   position: relative;
   z-index: 2;
-  height: 100vh;
+  height: 100%;
   display: flex;
+  padding-bottom: 80px;
 }
 
 .about .about-content .left {
@@ -34,7 +35,8 @@
 
 .about .about-content .right p {
   text-align: justify;
-  letter-spacing: 4px;
+  font-size: 20px;
+  letter-spacing: 2px;
   span {
     color: #eb9f0c;
   }
