--- a/source/assets/stylesheets/pages/_about_collapse.scss
+++ b/source/assets/stylesheets/pages/_about_collapse.scss
@@ -12,7 +12,7 @@
   letter-spacing: 2px;
   h3 {
     opacity: .7;
-    font-size: 26px;
+    font-size: 28px;
   }
 }
 
@@ -23,7 +23,7 @@
   align-items: center;
   flex-wrap: wrap;
   border: 1px solid #e7e7e7;
-  padding: 56px 0;
+  padding: 56px 16px;
   border-radius: 8px;
   li, p {
     padding-left: 8px;
