--- a/source/assets/stylesheets/pages/_media_queries.scss
+++ b/source/assets/stylesheets/pages/_media_queries.scss
@@ -177,6 +177,7 @@
 
   .about .about-content .right p {
     letter-spacing: 1px;
+    font-size: 16px;
   }
 
   .about .about-content .left img {
